--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${packageName}.${activityClass}" >
+    
+    <FrameLayout
+        android:id="@+id/frmMainContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
