Added first interaction

--- a/res/layout/fragment_dashboard.xml
+++ b/res/layout/fragment_dashboard.xml
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/bg_card"
+        android:clickable="true"
         android:orientation="vertical"
         android:paddingBottom="10dp" >
 
