--- a/res/layout/fragment_new_goal.xml
+++ b/res/layout/fragment_new_goal.xml
@@ -4,26 +4,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/tvBorder"
+        style="@style/DashboardBoxTitle"
+        android:background="@color/darkgray"
+        android:includeFontPadding="false"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:text="@string/label_new_savings_goal" />
+
+    <RelativeLayout
+        android:id="@+id/rlNewGoalName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/tvNewGoalLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="@string/label_new_goal_name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <EditText
+            android:id="@+id/etNewGoalName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tvNewGoalLabel"
+            android:layout_alignParentRight="true"
+            android:hint="@string/sample_new_goal_name"
+            android:inputType="text" >
+
+            <requestFocus />
+        </EditText>
+    </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rlNewGoalAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/tvBorder"
-            style="@style/DashboardBoxTitle"
-            android:background="@color/darkgray"
-            android:includeFontPadding="false"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:text="@string/nothing" />
-
-        <TextView
             android:id="@+id/tvAmountLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvBorder"
             android:text="@string/label_amount"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -33,46 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvAmountLabel"
             android:layout_alignParentRight="true"
-            android:ems="10"
+            android:hint="@string/sample_total_payment"
             android:inputType="numberDecimal" >
-
-            <requestFocus />
-        </EditText>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlNewGoalDueDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/tvBorder1"
-            style="@style/DashboardBoxTitle"
-            android:background="@color/darkgray"
-            android:includeFontPadding="false"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:text="@string/nothing" />
-
-        <TextView
-            android:id="@+id/tvDueLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvBorder1"
-            android:text="@string/label_goal_due_date"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tvDueLabel"
-            android:layout_alignParentRight="true"
-            android:ems="10"
-            android:inputType="numberDecimal" >
-
-            <requestFocus />
         </EditText>
     </RelativeLayout>
 
@@ -82,20 +69,9 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/tvBorder2"
-            style="@style/DashboardBoxTitle"
-            android:background="@color/darkgray"
-            android:includeFontPadding="false"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:text="@string/nothing" />
-
-        <TextView
             android:id="@+id/tvNewGoalFrequencyLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvBorder2"
             android:text="@string/label_goal_frequency"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -105,11 +81,52 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvNewGoalFrequencyLabel"
             android:layout_alignParentRight="true"
-            android:ems="10"
-            android:inputType="numberDecimal" >
-
-            <requestFocus />
+            android:hint="@string/sample_goal_frequency"
+            android:inputType="text" >
         </EditText>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlNewGoalDueDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/tvDueLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_goal_due_date"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tvDueLabel"
+            android:layout_alignParentRight="true"
+            android:hint="@string/sample_goal_due_date"
+            android:inputType="text" >
+        </EditText>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1" >
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/label_btn_cancel" />
+
+        <Button
+            android:id="@+id/btnCreateGoal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="@string/label_btn_create_goal" />
+    </LinearLayout>
 
 </LinearLayout>
