Add a ExpandableListView to show current expenses of the user

--- a/res/layout/fragment_liquid_assets.xml
+++ b/res/layout/fragment_liquid_assets.xml
@@ -65,7 +65,7 @@
     </RelativeLayout>
 
     <ExpandableListView
-        android:id="@+id/elxLiquidAssets"
+        android:id="@+id/elvExpenses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rlAssetsSummary"
