--- a/res/menu/dashboard.xml
+++ b/res/menu/dashboard.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item 
+        android:id="@+id/action_edit_profile"
+        android:icon="@drawable/ic_action_edit_profile"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/title_edit_profile"/>
+    
+    <item 
         android:id="@+id/action_add_goal"
         android:icon="@drawable/ic_action_add"
         android:orderInCategory="200"
