--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -49,6 +49,13 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+    
+    <style name="DashboardMediumText" parent="@android:style/TextAppearance">
+        <item name="android:textSize">16sp</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 
     <style name="NewGoalDialog" parent="@android:style/Theme.Holo.Light.DialogWhenLarge.NoActionBar">
     </style>
