--- a/res/layout/item_goal.xml
+++ b/res/layout/item_goal.xml
@@ -2,21 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="15dp"
-    android:layout_marginTop="15dp"
+    android:background="@color/lightgray"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tvGoalName"
+        android:id="@+id/tvName"
         style="@style/DashboardMediumText"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
         android:text="@string/sample_goal_name" />
 
     <TextView
-        android:id="@+id/tvGoalDueDate"
+        android:id="@+id/tvDueDate"
         style="@style/DashboardSmallText"
-        android:layout_alignLeft="@+id/tvGoalName"
-        android:layout_below="@+id/tvGoalName"
+        android:layout_alignLeft="@+id/tvName"
+        android:layout_below="@+id/tvName"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="5dp"
         android:text="@string/sample_due_date_human" />
 
@@ -24,8 +25,8 @@
         android:id="@+id/tvPaymentDue"
         style="@style/MediumAmount"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="20dp"
+        android:layout_alignTop="@+id/tvName"
+        android:layout_marginRight="29dp"
         android:text="@string/sample_total_payment"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
