--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    
+
     <style name="LargeAmount" parent="@android:style/TextAppearance">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">30sp</item>
@@ -33,7 +33,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    
+
     <style name="MediumAmount" parent="@android:style/TextAppearance">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>
@@ -49,7 +49,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    
+
     <style name="DashboardMediumText" parent="@android:style/TextAppearance">
         <item name="android:textSize">16sp</item>
         <item name="android:typeface">normal</item>
@@ -57,7 +57,14 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="NewGoalDialog" parent="@android:style/Theme.Holo.Light.DialogWhenLarge.NoActionBar">
+    <style name="NewGoalDialog" parent="@android:style/Theme.Holo.Light.DialogWhenLarge.NoActionBar"></style>
+
+    <style name="DashboardLiquidAssetBalance" parent="@style/LargeAmount">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    
+    <style name="DashboardLiquidAssetLabel" parent="@style/DashboardSmallText">
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
