--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="light_blue">#c1dbee</color>
     <color name="navy_blue">#165b8c</color>
     <color name="liquid_asset_background">#23c7a1</color>
+    <color name="light_red">#E82C0C</color>
 
 </resources>
