--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Parse -->
+    <dimen name="com_parse_ui_horizontal_margin">16dp</dimen>
+    <dimen name="com_parse_ui_vertical_margin">16dp</dimen>
+    <dimen name="com_parse_ui_small_vertical_spacing">8dp</dimen>
+    <dimen name="com_parse_ui_vertical_spacing">16dp</dimen>
+    <dimen name="com_parse_ui_large_vertical_spacing">24dp</dimen>
+    <dimen name="com_parse_ui_xlarge_vertical_spacing">36dp</dimen>
+    <dimen name="com_parse_ui_small_horizontal_spacing">8dp</dimen>
+
 </resources>
